# kaf-s3

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  pypi.yml  release.yml
charts/kaf-s3-connector/: Chart.yaml  values.yaml
charts/kaf-s3-connector/templates/: _helpers.tpl  deployment.yaml  service.yaml
config/: grafana-dashboard.json  prometheus.yml
src/s3_connector/: __init__.py  _version.py  consumer.py  producer.py  runtime.py
tests/: conftest.py  test_consumer.py  test_producer.py  test_runtime.py
