[build-system]
requires = ["setuptools>=61,<75", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaf-s3-connector"
dynamic = ["version"]
description = "A Python library to handle large Kafka messages using S3."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "2pk03"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.20.0",
    "confluent-kafka>=1.8.2",
]

[project.urls]
Homepage = "https://github.com/2pk03/kaf-s3"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/s3_connector/_version.py"
